--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -19,4 +19,4 @@
   </ul>
 </div>
 
-<div class="page__footer-copyright">&copy; {{ site.time | date: '%Y' }} {{ site.name | default: site.title }}. {{ site.data.ui-text[site.locale].powered_by | default: "Powered by espresso and a passion for learning" }} - (a <a href="http://jekyllrb.com/">Jekyll</a> &amp; <a href="http://pages.github.com/">Github Pages</a> site) </div>
+<div class="page__footer-copyright">&copy; {{ site.time | date: '%Y' }} {{ site.name | default: site.title }}. {{ site.data.ui-text[site.locale].powered_by | default: "Powered by espresso and a passion for learning" }} </div>
