--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,11 +1,33 @@
 ---
 layout: archive
 ---
-
+<!-- used for pagination - add to blog posts page one day
 <h3 class="archive__subtitle">{{ site.data.ui-text[site.locale].recent_posts | default: "Recent Posts" }}</h3>
 
 {% for post in paginator.posts %}
   {% include archive-single.html %}
 {% endfor %}
 
-{% include paginator.html %}
+{% include paginator.html %} -->
+
+
+<div class="post_text">
+    <h2 id="about-me">about me</h2>
+
+<p>Hi I&#39;m Nick Zanobini. Thanks for visiting!</p>
+
+<p>I&#39;m an engineer by training and an inventor / roboticist by passion.</p>
+
+<p>After getting my Bachelors in Electrical Engineering and playing Division 1 Water Polo, I took a job at Boston Scientific as an Equipment Engineer, where I am today.</p>
+
+<p>I am always working on two or three projects on the nights and weekends. My goal is as I bring them to some temporary form of completion that I will add them here.</p>
+
+<p>One day, all of my past selves will unite to form <a href="https://www.youtube.com/watch?v=tZZv5Z2Iz_s">Voltron</a>.</p>
+
+<p>On this site you can check out my <a href="projects/">side projects</a> and the <a href="blog/">thoughts/tips</a> I&#39;ve had along the way.</p>
+
+<p>I am <a href="https://github.com/nick-zanobini">nick-zanobini</a> on GitHub. You can find my full CV on my
+<a href="https://www.linkedin.com/in/nickzanobini">LinkedIn</a> page.</p>
+<!-- add an option to download pdf version of CV -->
+
+</div>
