--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,14 +1,6 @@
 ---
+Layout: splash
 ---
-<!-- used for pagination - add to blog posts page one day
-<h3 class="archive__subtitle">{{ site.data.ui-text[site.locale].recent_posts | default: "Recent Posts" }}</h3>
-
-{% for post in paginator.posts %}
-  {% include archive-single.html %}
-{% endfor %}
-
-{% include paginator.html %} -->
-
 
 <div class="post_text">
     <h2 id="about-me">about me</h2>
